--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd-mobile": "^2.2.14",
     "better-scroll": "^1.15.2",
     "es6-promise": "^4.2.8",
     "pubsub-js": "^1.7.0",
